--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Brain Tumor Detection Project - Dependencies
+# Brain Tumor Detection - Dependencies
 
 # Deep Learning
 tensorflow>=2.10.0
@@ -29,3 +29,6 @@ ipykernel>=6.20.0
 # Utilities
 tqdm>=4.64.0
 python-dotenv>=1.0.0
+
+# Testing
+pytest>=7.0.0
