--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ seaborn>=0.12.0
 
 # Web App
 streamlit>=1.28.0
+huggingface-hub>=0.20.0  # For model hosting/download
 
 # Jupyter Notebooks
 jupyter>=1.0.0
